Interacting with the api, updating stars from the front

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,7 +7,7 @@
         </div>
         
         <div class="col-md-6">
-            <app-movie-details [movie]="this.selectedMovie"></app-movie-details>
+            <app-movie-details [movie]="this.selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
         </div>
         
     </div>
