--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -5,7 +5,6 @@
         <div class="card-title"><h1>{{ movie.title }}</h1></div>
         <div class="card-body">
           <p>{{ movie.description}}</p>
-         
          <span>
             {{ movie.avg_rating }}
             <i class="bi bi-star-fill" [ngClass]="{'orange': movie.avg_rating > 0}"></i>
@@ -15,7 +14,14 @@
             <i class="bi bi-star-fill" [ngClass]="{'orange': movie.avg_rating > 4}"></i>
          </span> 
         </div>
-      </div>
+    </div>
+
+    <div class="container">
+        <h2>Rate It!</h2>
+        <i *ngFor="let star of [1,2,3,4,5]" class="bi bi-star-fill" (mouseenter)="starHover(star)"
+        (mouseleave)="starMoverd = 0" (click)="starClick(star)"
+        [ngClass]="{'orange': starMoverd >= star}"></i>
+    </div>
 
 </div>
 
