--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,12 +2,16 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
             <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"></app-movie-list>
         </div>
         
-        <div class="col-md-6">
+        <div class="col-md-4">
             <app-movie-details [movie]="this.selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
+        </div>
+        
+        <div class="col-md-4" *ngIf="editMovie">
+            <app-movie-form ></app-movie-form>
         </div>
         
     </div>
