--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,17 +1,19 @@
-<h3>Movies</h3>
+
 
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"></app-movie-list>
+            <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"
+            (editedMovie)="editedMovie($event)" (movie)="createNewMovie()" (deletedMovie)="deletedMovie($event)"></app-movie-list>
         </div>
         
         <div class="col-md-4">
             <app-movie-details [movie]="this.selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
         </div>
         
-        <div class="col-md-4" *ngIf="editMovie">
-            <app-movie-form ></app-movie-form>
+        <div class="col-md-4" >
+            <app-movie-form *ngIf="editMovie" [movie]="this.editMovie"
+             (movieCreated)="movieCreated($event)" (movieUpdated)="movieUpdated($event)"></app-movie-form>
         </div>
         
     </div>
