--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -8,13 +8,13 @@
         <form action="" [formGroup]="authForm" (submit)="saveForm()">
 
             <div class="mb-3">
-                <label for="title" class="form-label">Email</label>
-                <input type="email" class="form-control" formControlName="email" placeholder="">
+                <label for="title" class="form-label">User Name</label>
+                <input type="username" class="form-control" formControlName="username">
             </div>
 
             <div class="mb-3"> 
                 <label for="description" class="form-label">Password</label>
-                <input type="password" class="form-control" formControlName="password" placeholder="">
+                <input type="password" class="form-control" formControlName="password">
             </div>
 
             <button type="submit" class="btn btn-primary">
