--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    background-color: rgb(218, 214, 214);
+}
+
+
+
+
