--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,19 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Movie Rater</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Features</a>
+        </div>
+      </div>
+    </div>
+  </nav>
 
-
-<div class="container">
+  <div class="container">
     <div class="row">
         <div class="col-md-4">
             <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"
@@ -16,15 +29,18 @@
              (movieCreated)="movieCreated($event)" (movieUpdated)="movieUpdated($event)"></app-movie-form>
         </div>
     </div>
-   
 </div>
-<br>
+   
+
+
+
+<!--
 <div class="row">
     <div class="container">
         <button class="btn btn-primary btn-sm" (click)="logout()">LogOut</button>
     </div>
 </div>
-
+-->
 
 
 
