--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,8 +1,8 @@
 
-<div class="" *ngIf="movie"> 
+<div class="mt-5" *ngIf="movie"> 
 
-    <div class="card">
-        <div class="card-title"><h1>{{ movie.title }}</h1></div>
+    <div class="card text-bg-dark">
+        <h4 class="card-title text-center">{{ movie.title }}</h4>
         <div class="card-body">
           <p>{{ movie.description}}</p>
          <span>
