--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link active" href="#" (click)="logout()">Log Out</a>
         </div>
       </div>
-    </div>
+    </div>  
   </nav>
 
   <div class="container">
