--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -15,19 +15,21 @@
 
   <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"
             (editedMovie)="editedMovie($event)" (movie)="createNewMovie()" (deletedMovie)="deletedMovie($event)"></app-movie-list>
         </div>
         
-        <div class="col-md-4">
+        <div class="col-md-6">
             <app-movie-details [movie]="this.selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
         </div>
         
-        <div class="col-md-4" >
+        <!--        <div class="col-md-4" >
             <app-movie-form *ngIf="editMovie" [movie]="this.editMovie"
              (movieCreated)="movieCreated($event)" (movieUpdated)="movieUpdated($event)"></app-movie-form>
         </div>
+        -->
+
     </div>
 </div>
    
