--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,12 +1,14 @@
 
 <div class="mt-5" *ngIf="movie"> 
 
+    <h3 class="text-center mt-5">Rate Movie</h3>
+
     <div class="card text-bg-dark">
         <h4 class="card-title text-center">{{ movie.title }}</h4>
         <div class="card-body">
           <p>{{ movie.description}}</p>
          <span>
-            {{ movie.avg_rating }}
+            {{ movie.avg_rating }} ({{movie.num_stars}})
             <i class="bi bi-star-fill" [ngClass]="{'orange': movie.avg_rating > 0}"></i>
             <i class="bi bi-star-fill" [ngClass]="{'orange': movie.avg_rating > 1}"></i>
             <i class="bi bi-star-fill" [ngClass]="{'orange': movie.avg_rating > 2}"></i>
@@ -18,7 +20,7 @@
 
     <div class="container">
         <h2>Rate It!</h2>
-        <i *ngFor="let star of [1,2,3,4,5]" class="bi bi-star-fill" (mouseenter)="starHover(star)"
+        <i id="irate" *ngFor="let star of [1,2,3,4,5]" class="bi bi-star-fill" (mouseenter)="starHover(star)"
         (mouseleave)="starMoverd = 0" (click)="starClick(star)"
         [ngClass]="{'orange': starMoverd >= star}"></i>
     </div>
